# rust-backend-showcase-jsonplaceholder

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: tests.yml
resources/test/: config.toml
src/: configuration.rs  main.rs  user.rs  user_client.rs  user_controller.rs  user_service.rs
