[package]
name = "rust-backend-showcase-jsonplaceholder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
config = "0.13.3"
httpmock = "0.6.8"
lazy_static = "1.4.0"
mongodb = "2.7.0"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
url = "2.4.1"
